--- a/Source/ToolkitUtils.TMagic/ToolkitUtils.TMagic.csproj
+++ b/Source/ToolkitUtils.TMagic/ToolkitUtils.TMagic.csproj
@@ -1,86 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{D0B7C9CD-F49D-413D-8EDC-32989742F3C3}</ProjectGuid>
-        <OutputType>Library</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>SirRandoo.ToolkitUtils</RootNamespace>
-        <AssemblyName>ToolkitUtils.TMagic</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-        <LangVersion>8</LangVersion>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath>..\..\Compatibility\TMagic\1.2\Assemblies</OutputPath>
-        <DefineConstants>DEBUG;TRACE:RW12</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath>..\..\Compatibility\TMagic\1.2\Assemblies</OutputPath>
-        <DefineConstants>TRACE;RW12</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == '1.3 debug|AnyCPU' ">
-        <OutputPath>..\..\Compatibility\TMagic\1.3\Assemblies\</OutputPath>
-        <DefineConstants>DEBUG;TRACE;RW13</DefineConstants>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == '1.3 release|AnyCPU' ">
-        <OutputPath>..\..\Compatibility\TMagic\1.3\Assemblies\</OutputPath>
-        <DefineConstants>TRACE;RW13</DefineConstants>
+        <TargetFramework>net48</TargetFramework>
+        <CompatibilityFor>TMagic</CompatibilityFor>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="0JecsTools, Version=1.3.0.2, Culture=neutral, PublicKeyToken=null" Condition="$(DefineConstants.Contains('RW13'))">
-            <HintPath>..\..\..\..\..\..\workshop\content\294100\932008009\1.3\Assemblies\0JecsTools.dll</HintPath>
+        <Reference Include="0JecsTools">
+            <HintPath>$(RimWorldWorkshopRoot)\932008009\1.5\Assemblies\0JecsTools.dll</HintPath>
             <Private>False</Private>
         </Reference>
-        <Reference Include="AbilityUser, Version=1.3.0.2, Culture=neutral, PublicKeyToken=null" Condition="$(DefineConstants.Contains('RW13'))">
-            <HintPath>..\..\..\..\..\..\workshop\content\294100\932008009\1.3\Assemblies\AbilityUser.dll</HintPath>
+        <Reference Include="AbilityUser">
+            <HintPath>$(RimWorldWorkshopRoot)\932008009\1.5\Assemblies\AbilityUser.dll</HintPath>
             <Private>False</Private>
         </Reference>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Xml"/>
-        <Reference Include="TorannMagic, Version=2.6.0.3, Culture=neutral, PublicKeyToken=null" Condition="$(DefineConstants.Contains('RW13'))">
-            <HintPath>..\..\..\..\..\..\workshop\content\294100\1201382956\v1.3\Assemblies\TorannMagic.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="TwitchToolkit, Version=2.0.10.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\..\..\..\workshop\content\294100\1718525787\v1.3\Assemblies\TwitchToolkit.dll</HintPath>
+        <Reference Include="TorannMagic">
+            <HintPath>$(RimWorldWorkshopRoot)\1201382956\v1.4\Assemblies\TorannMagic.dll</HintPath>
             <Private>False</Private>
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ClassSelector.cs"/>
-        <Compile Include="Commands\PawnClass.cs"/>
-        <Compile Include="MagicCompat.cs"/>
-        <Compile Include="Patches\ClassSelectorPatch.cs"/>
-        <Compile Include="StaticRunner.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Patches\Runner.cs"/>
+        <ProjectReference Include="..\ToolkitUtils\ToolkitUtils.csproj" Private="false" ExcludeAssets="runtime"/>
     </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\ToolkitUtils\ToolkitUtils.csproj" Private="false" ExcludeAssets="all" Exclude="RestSharp.dll">
-            <Project>{03518130-ce79-47fd-9273-36b2c61cd05c}</Project>
-            <Name>ToolkitUtils</Name>
-        </ProjectReference>
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="HodlHodl.Rimworld.Toolkit.Core" Version="1.1.11" ExcludeAssets="runtime"/>
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.3102"/>
-        <PackageReference Include="Lib.Harmony" Version="2.1.1" ExcludeAssets="runtime"/>
-    </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
 </Project>
