--- a/.gitignore
+++ b/.gitignore
@@ -402,14 +402,11 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-/ToolkitUtils.sln.DotSettings
 /.idea/*
-/[0-9].[0-9]/Assemblies/
+/[0-9].[0-9]*/Assemblies/
 /*.zip
 /About/* - Testing.*
 /About/* - Stable.*
 /_PublisherPlus.xml
 /Scripts/
-/Source/ToolkitUtils/ToolkitUtils\.csproj.DotSettings
-/Compatibility/TMagic/[0-9].[0-9]/Assemblies/
-/Compatibility/Ideology/[0-9].[0-9]/Assemblies/
+/Compatibility/**/[0-9].[0-9]*/Assemblies/
